[tool.poetry]
name = "gwar-bot"
version = "0.1.0"
description = ""
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
twitchio = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
